# multi-agent-system-with-mcp

./: LICENSE  README.md  contex_aware_agent_4.2.ipynb  context_aware_system_rag_part4.ipynb  example.env  helper.py  llm_clients.py  mcp_mas_example_basic.ipynb  mcp_multi_agent_with_error_handelling.ipynb  part4_rag_part_for_context_aware_system.ipynb  prompt.py  pyproject.toml  settings.py
SRL/: marketing_analysisy_context.ipynb  semantic_graph.ipynb
app/config/: settings.py
app/db/: client.py  query.py
app/llm/: client.py  embedding.py
app/mcp/: message.py
mcp/: message.py
templates/: prompt1.j2
tests/: test_db_query.py
