[project]
name = "Multi-Agent-System-With-MCP"
version="0.01" 
requires-python= ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.4",
    "langchain-cohere>=0.5.0",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "notebook>=7.5.2",
    "openai>=2.15.0",
    "pinecone>=8.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic[standard]>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sync>=1.0.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
